Solution of leetcode 467